@@ -1,3 +1,8 @@
+2001-06-26  Havoc Pennington  <hp@redhat.com>
+
+	* gtk/gtkwindow.c (gtk_window_class_init): add "resizable"
+	property
+
 Tue Jun 26 12:59:28 2001  Jonathan Blandford  <jrb@redhat.com>
 
 	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_set_model): fix
